// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components AppNavigator should render self and subcomponents 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BaseLightbox />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "height": 1334,
            "justifyContent": "center",
            "width": 750,
          }
        }
      >
        <Button
          onPress={[Function]}
          title="Close"
        />
      </View>,
      "style": Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(52,52,52,0.5)",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "opacity": 0,
        },
      ],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          undefined,
          <Button
            onPress={[Function]}
            title="Close"
          />,
        ],
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "height": 1334,
          "justifyContent": "center",
          "width": 750,
        },
      },
      "ref": null,
      "rendered": Array [
        undefined,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "onPress": [Function],
            "title": "Close",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "height": 1334,
              "justifyContent": "center",
              "width": 750,
            }
          }
        >
          <Button
            onPress={[Function]}
            title="Close"
          />
        </View>,
        "style": Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(52,52,52,0.5)",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "opacity": 0,
          },
        ],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            undefined,
            <Button
              onPress={[Function]}
              title="Close"
            />,
          ],
          "style": Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "height": 1334,
            "justifyContent": "center",
            "width": 750,
          },
        },
        "ref": null,
        "rendered": Array [
          undefined,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "onPress": [Function],
              "title": "Close",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`components LightboxBase should render self and subcomponents 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BaseLightbox
    horizontalPercent={0.5}
    verticalPercent={0.5}
  >
    <View />
  </BaseLightbox>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "height": 667,
            "justifyContent": "center",
            "width": 375,
          }
        }
      >
        <View />
        <Button
          onPress={[Function]}
          title="Close"
        />
      </View>,
      "style": Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(52,52,52,0.5)",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "opacity": 0,
        },
      ],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          Array [
            <View />,
          ],
          <Button
            onPress={[Function]}
            title="Close"
          />,
        ],
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "height": 667,
          "justifyContent": "center",
          "width": 375,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "onPress": [Function],
            "title": "Close",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "height": 667,
              "justifyContent": "center",
              "width": 375,
            }
          }
        >
          <View />
          <Button
            onPress={[Function]}
            title="Close"
          />
        </View>,
        "style": Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(52,52,52,0.5)",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "opacity": 0,
          },
        ],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            Array [
              <View />,
            ],
            <Button
              onPress={[Function]}
              title="Close"
            />,
          ],
          "style": Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "height": 667,
            "justifyContent": "center",
            "width": 375,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "onPress": [Function],
              "title": "Close",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
